--- a/Paralyser/Paralyser/Paralyser.csproj
+++ b/Paralyser/Paralyser/Paralyser.csproj
@@ -91,6 +91,7 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Global.asax" />
     <Content Include="packages.config" />
     <None Include="Properties\PublishProfiles\RB-Paralyser-SydneyDemo - Web Deploy.pubxml" />
     <None Include="Web.Debug.config">
@@ -108,6 +109,9 @@
     <Compile Include="Controllers\ParagraphsController.cs" />
     <Compile Include="Data\DatabaseContext.cs" />
     <Compile Include="Data\ParagraphText.cs" />
+    <Compile Include="Global.asax.cs">
+      <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <PropertyGroup>
