--- a/Paralyser/Paralyser/Web.config
+++ b/Paralyser/Paralyser/Web.config
@@ -4,15 +4,16 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-    <connectionStrings>
-        <add name="sqlAzure"
-             connectionString="Data Source=azureday-sql.database.windows.net;Initial Catalog=AzureDay-SQL;Integrated Security=False;User ID=richard;Password=********;Connect Timeout=60;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"/>
-    </connectionStrings>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <system.web>
+    <connectionStrings>
+        <add name="sqlAzure"
+             providerName="System.Data.SqlClient"
+             connectionString="Data Source=azureday-sql.database.windows.net;Initial Catalog=AzureDay-SQL;Integrated Security=False;User ID=richard;Password=azureDay2016!;Connect Timeout=60;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"/>
+    </connectionStrings>
+    <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
   </system.web>
