--- a/Paralyser/Paralyser/packages.config
+++ b/Paralyser/Paralyser/packages.config
@@ -8,5 +8,9 @@
   <package id="Microsoft.Azure.DocumentDB" version="1.7.1" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net452" />
+  <package id="Swashbuckle" version="5.3.2" targetFramework="net452" />
+  <package id="Swashbuckle.Core" version="5.3.2" targetFramework="net452" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net452" />
 </packages>
